[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
description = "A maze generator, and printer"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/HajjDev/42-A-Maze-ing/"
Issues = "https://github.com/HajjDev/42-A-Maze-ing/issues"
